cluster/homelab/apps/archive/monitoring/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: grafana
    namespace: monitoring
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:ZMeENA==,iv:/V/ffHaUWHgT11nrKYX9k7ogN4Qot2FQpvoMGZUaGJo=,tag:8lx7+7cMcSM58o6QpKRBCQ==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:JeCTvpCbK4YTUQ==,iv:+ayXBbcRlYtoUlpalZPainXv1n9xwBRI9uq5pTtdv1Q=,tag:8DfA2TFsdlt4/PHJV+aZ4Q==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:eZb6doiqw7eKEw==,iv:4XPrle4WzyoyP7g6y9TEQOyWM0f5S5RpGU9JVciaq+M=,tag:98DLRttfdV/HVDLlS0W0fQ==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:ffQu7xHBcQ==,iv:BHVAvERU8VEIgJEC5N6WN1Yc9F33rVRNRJLm4NZFf1s=,tag:UjdcjrpHaJA1iEBvQ59u1A==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:mSqwd7UZJA==,iv:hD78gFteVs+Ah5EvlbbzJudoVTk7zSR+HsG2mHGNQR4=,tag:cVWAzwDtLfA5WFJVnAdQBA==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:KdcepOZ4wQ==,iv:CeWBsidKHpt1sJoauZrJlOGmzwL6IIO9jwZOuhbu3bk=,tag:yQTuoUhuxkPU5lsH7r1dqg==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:b4otjN56moe6ntlIZ6dx3o/qY/wCEf27RI8=,iv:iVDMjSDbU+tCedb/Cd75Yy280hhMjn2uTNXIWB8S3/s=,tag:85OMQfLQW2SVRUwypKdQzg==,type:str]
        gethomepage.dev/widget.username: ENC[AES256_GCM,data:BJoLFfc=,iv:0vmiI6lYukTJ8LKRp+b7/6R1b6RlZNb4Lsuk9pr3UEc=,tag:d34KfCFfUR2O+L8uH7Ve/Q==,type:str]
        gethomepage.dev/widget.password: ENC[AES256_GCM,data:O1YFg5f012g=,iv:Uqz4Mw9uboDjBAMSUicfO6EDEWFr4dyrkeHAD34HSOs=,tag:DiI7A07+BUIYl2rM+/SjJQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTZHV3b21IVW1RY1JuM1py
[...]
            F5EyggL8ER8GVmM1sqgJV8jEQWFb143kulVULyVpkKflgFX1dDJC4w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-04-20T20:11:07Z"
    mac: ENC[AES256_GCM,data:hSv79J5FxEhGgQfQlQgO7Ah2fwsEkw1ESjfJ75o3WhDcYxdgEthB3ROUnbK7jZjrJBi+J5c061QZ3ItFWxqG/H3sn16y2nYd0kl1ephTM/APmvg5b6NtYjWDD2YaiOIm/55rS07t07dIuPfhOR6cP0x5+icBT4bLLgFqKHlgTF0=,iv:rhJ9yaH00tEacRbX3fCBtUgWVWJp88DwVOn6mQK39EU=,tag:lEnpNjMtlzy8ZL64tIurPw==,type:str]
    pgp: []
    encrypted_regex: ^(rules|annotations|)$
    version: 3.8.1
